# rdeebee

./: .gitignore  Cargo.toml  README.md  build.rs  config.yaml  setup_etcd.sh
.github/ISSUE_TEMPLATE/: i-have-a-question.md
consul/configs/: pv.yaml  sc.yaml
deployment/: Dockerfile-server  build_client.sh  build_server.sh  client.yaml  etcd.yaml  server.yaml
deployment/client/: Dockerfile  client.yaml
deployment/consul/: deploy_consul.sh
deployment/consul/configs/: values.yaml
deployment/server/: Dockerfile  build_server.sh  configmap.yaml  server.yaml
redisops/: Dockerfile  apply_redis_service.sh  go.mod  go.sum  main.go
redisops/config/: apply_redis_service.sh  configmap.yaml  pv.yaml  statefulset.yaml
src/: errors.rs  event.rs  lib.rs  recovery.rs
src/cluster_ops/: config.rs  error.rs  mod.rs  node.rs  registry.rs
src/protos/: mod.rs  operation.proto
src/rdeebee_common/: consul.rs  mod.rs
src/storage/: event.rs  mod.rs
src/storage/disk/: mod.rs  sstable.rs  wal.rs
src/storage/mem/: bloomfilter.rs  memtable.rs  mod.rs  rbt.rs  wal.rs
src/storageops/: errors.rs  event.rs  mod.rs  recovery.rs
