[package]
name = "rdeebee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
uuid = { version = "1.2", features = ["v4", "serde"] }
rbtree = "0.1.5"
skiplist = "0.4"
bincode = "1.3.3"
serde = { version = "1.0.145", features = ["derive"] }
log = "0.4.17"
bitvec = "1.0.1"
fasthash = "0.4"
thiserror = "1.0.37"
anyhow = "1.0.66"
rand = "0.8.5"

tokio = { version = "1.21.2", features = ["full"] }
parking_lot = "0.12.1"
crossbeam = "0.8.2"
protobuf = "3.2"
clap = { version = "4.0.18", features = ["derive"] }

[build-dependencies]
protobuf-codegen = "3.2"