[package]
name = "rdeebee"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rdb-server"
path = "src/bin/server.rs"

[[bin]]
name = "rdb-client"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
futures-util = "0.3.25"
etcd-client = "0.10.2"
thiserror = "1.0.37"
anyhow = "1.0.66"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_yaml = "0.9.14"

uuid = { version = "1.2", features = ["v4", "serde"] }
rbtree = "0.1.5"
skiplist = "0.4"
bincode = "1.3.3"
bitvec = "1.0.1"
fasthash = "0.4"
rand = "0.8.5"

parking_lot = "0.12.1"
clap = { version = "4.0.18", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
protobuf = "3.2.0"

[build-dependencies]
protobuf-codegen = "3.2"