[package]
name = "rdeebee-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitvec = "1.0.1"
fxhash = "0.2.1"
serde = { version = "1.0.171", features = ["derive"] }
skiplist = "0.5.1"
uuid = { version = "1.4.1", features = ["v4", "serde"]}
thiserror = "1.0.43"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"